[package]
name = "tic-tool"
version = "0.1.0"
authors = ["Dennis Ranke <dennis.ranke@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "3.0.0-beta.2", features = ["derive"] }
libflate = "1"
zopfli = "0.4"
notify = "4"
regex = "1.4"
lazy_static = "1.4"
crossterm = "0.19"